# Sachacks2023

./: README.md
demo/: .factorypath  pom.xml
demo/src/main/java/com/example/demo/: PositionRequest.java  PositionResponse.java
demo/src/main/java/com/example/demo/controllers/api/: PositionController.java
frontend/: .gitignore  Cargo.toml  Trunk.toml  app.css  index.html  input.css
frontend/src/: main.rs
model/: hackathon_project.ipynb  jlist.json  server.py
model/best_weights/: keras_metadata.pb  saved_model.pb
model/best_weights/variables/: variables.index
scraper/: All_Occupations.csv  data_set.json  link_generator.py  new_data_set.json  scraper.py
