[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = "1.0.174"
serde_json = "1.0.103"
js-sys = "0.3.64"
web-sys = { version ="0.3.64", features = ["Window"]}
wasm-bindgen = "0.2.87"
reqwest = "0.11.22"
